--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Party big, Party real, Projet X</h1>
     <h2>Projet X changes your life for a night.</h2>
      <div id="start">
-     <a href="" class="btn-purple">.START NOW. </a>
+     <a href="join-section" class="btn-purple">.START NOW. </a>
      </div>
   </div>
   </div>
@@ -51,6 +51,9 @@
 	  
    </div>
   </div>
-  <div data-tf-widget="fwGWSMRK" data-tf-opacity="100" data-tf-iframe-props="title=My typeform" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+
+  <div id="join-section">
+   <div data-tf-widget="fwGWSMRK" data-tf-opacity="100" data-tf-iframe-props="title=My typeform" data-tf-transitive-search-params data-tf-medium="snippet" style="width:100%;height:500px;"></div><script src="//embed.typeform.com/next/embed.js"></script>
+  </div>
 </body>
 </html>
